// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component Input Snapshot added optional style inline prop 1`] = `
<div
  className="jsx-212918199"
>
  <input
    className="jsx-212918199"
    name="input"
    onChange={[Function]}
    placeholder="Input"
    style={
      Object {
        "lineHeight": 2,
        "marginTop": 30,
      }
    }
    type="text"
    value=""
  />
</div>
`;

exports[`Component Input Snapshot without arguments, take the default values 1`] = `
<div
  className="jsx-212918199"
>
  <input
    className="jsx-212918199"
    name="input"
    onChange={[Function]}
    placeholder="Input"
    style={Object {}}
    type="text"
    value=""
  />
</div>
`;
